2011-02-21  Frank Warmerdam  <warmerdam@pobox.com>

	* src/proj_etmerc.c: added extended transverse mercator impl. (#97)

	* Rerun autogen.sh with the latest versions of automake, autoconf and
	libtool.

2011-02-10  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_gridinfo.c: fix debug bounds reported (#95).

2011-02-08  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_cea.c: Fix particular CEA case  (#94).

	* src/pj_auth.c: correct precision of constants (#93)

	* src/pj_init.c, pj_malloc.c, jniproj.c: avoid C++ comments (#92)

2011-01-11  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_goode.c: fix propogation of es and ctx to sub-projections.

2010-10-19  Frank Warmerdam  <warmerdam@pobox.com>

	* src/proj_api.h, src/projects.h: move pj_clear_initcache() to public
	api and update to 4.8.0 PJ_VERSION to identify when this is available.

2010-08-31  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_gridinfo.c: Move grids in 180 to 360 region to -180 to 0. 
	Improve error/debug reporting. 

2010-08-21  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/test*: default to using ../src/cs2cs

2010-07-31  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/epsg: updated from GDAL.  Adds TMSO projection definitions,
	and replaces all named datums with fully defined datums.

2010-07-05  Frank Warmerdam  <warmerdam@pobox.com>

	* src/projects.h: I_ERROR macro must set context errno.  

2010-06-10  Frank Warmerdam  <warmerdam@pobox.com>

	* src/*: Preliminary implementation of projCtx multithreading change.

2010-05-11  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_apply_vgridshift.c (+more): preliminary addition of
	vertical grid shifting support.

2010-03-16  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_transform.c, src/pj_init.c, src/projects.h, src/pj_gridlist.c,
	src/pj_apply_gridshit.c: rework the translation of nadgrids parameters
	into a list of gridshift files to avoid use of static "lastnadgrids"